--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     testCompile 'junit:junit:4.12'
     compile files('libs/httpcore.jar')
+    compile 'com.xu.viewpagerflextitle:viewpagerflextitle:1.0.3'
 }
