--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,11 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".ui.home.activity.ContainerActivity"
+            android:name=".ui.common.ContainerActivity"
             android:configChanges="keyboardHidden|orientation|layoutDirection"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
-            android:theme="@style/mainTheme"
+            android:theme="@style/defaultTheme"
             android:windowSoftInputMode="stateAlwaysHidden|adjustPan">
 
             <intent-filter>
