--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,9 +39,9 @@ dependencies {
     compile 'com.jwenfeng.pulltorefresh:library:1.2.5'
     compile 'com.android.support:recyclerview-v7:21.0.+'
     compile files('libs/BaiduLBS_Android.jar')
-
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-// Because RxAndroid releases are few and far between, it is recommended you also
-// explicitly depend on RxJava's latest version for bug fixes and new features.
+    // Because RxAndroid releases are few and far between, it is recommended you also
+    // explicitly depend on RxJava's latest version for bug fixes and new features.
     compile 'io.reactivex.rxjava2:rxjava:2.1.5'
+    compile files('libs/jsoup-1.9.1.jar')
 }
