--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,7 +74,9 @@
             android:enabled="true"
             android:process=":remote"/>
 
-        <activity android:name=".ui.ZoomImageActivity">
+        <activity
+            android:name=".ui.ZoomImageActivity"
+            android:theme="@style/transparentTheme">
         </activity>
     </application>
 
