--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     // explicitly depend on RxJava's latest version for bug fixes and new features.
     compile 'io.reactivex.rxjava2:rxjava:2.1.5'
     compile files('libs/jsoup-1.9.1.jar')
+    compile 'com.contrarywind:Android-PickerView:3.2.6'
 }
