--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,8 +37,7 @@
         android:theme="@style/AppTheme">
 
         <!--正式版本时使用这个百度定位AK-->
-        <!--<meta-data
-            android:name="com.baidu.lbsapi.API_KEY" android:value="qGRjabc78lGqrtg6y2CwW22a5U12jWWe"/>-->
+        <!--<meta-data android:name="com.baidu.lbsapi.API_KEY" android:value="qGRjabc78lGqrtg6y2CwW22a5U12jWWe"/>-->
 
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
