--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,12 +36,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <!--正式版本时使用这个百度定位AK-->
-        <!--<meta-data android:name="com.baidu.lbsapi.API_KEY" android:value="qGRjabc78lGqrtg6y2CwW22a5U12jWWe"/>-->
+        <!--下面的是debug斑斑-->
+        <!--<meta-data android:name="com.baidu.lbsapi.API_KEY" android:value="hX5u0GZx9DVhlTxhjAY4D0cgD1xHxiZl"/>-->
 
-        <meta-data
-            android:name="com.baidu.lbsapi.API_KEY"
-            android:value="qGRjabc78lGqrtg6y2CwW22a5U12jWWe"/>
+        <meta-data android:name="com.baidu.lbsapi.API_KEY" android:value="hX5u0GZx9DVhlTxhjAY4D0cgD1xHxiZl"/>
 
         <activity
             android:name=".ui.common.ContainerActivity"
